--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
+        "symfony/browser-kit": "^3.4",
+        "symfony/css-selector": "^3.4",
         "symfony/phpunit-bridge": "^4.1"
     },
     "scripts": {
